@@ -49,6 +49,7 @@ Changes between htick-1.0-stable and htick-1.4-stable
    - recode filearea descriptions;
    - save modification time for files in fileechoes;
    - set 'Loc' flag on messages from FileFix.
+   - fixed crash while clean on passthrough areas with -p defined
 
 
 
